Add float style to buttons using float HTML/CSS

--- a/style.css
+++ b/style.css
@@ -166,6 +166,7 @@ body {
 }
 
 .works_content ul {
+  /*changes appear here */
   float: left;
   justify-content: space-between;
   margin-top: 0;
