--- a/style.css
+++ b/style.css
@@ -166,8 +166,9 @@ body {
 }
 
 .works_content ul {
+  display: flex;
   list-style-type: none;
-  
+  justify-content: space-between;
   margin-top: 0;
   margin-bottom: 12px;
   padding: 0;
@@ -175,8 +176,7 @@ body {
 }
 
 .works_content li {
-  float: left;
-  margin: 8px;
+  margin: 0;
   border: 2px solid #8993a4;
   padding: 10px;
   color: #091e42;
