Remove custom oninvalid parameters from form HTML/CSS

--- a/style.css
+++ b/style.css
@@ -60,6 +60,12 @@ body {
   overflow: hidden;
 }
 
+.centered_button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .header {
   background-color: #3c3a39;
   margin: 0;
