--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ body {
     align-content: center;
   }
 
+  .top_navigation {
+    background-color: #1c1a19;
+  }
+
   .content_desc img {
     display: none;
   }
@@ -80,12 +84,21 @@ body {
     margin-right: 8px;
   }
 
+  #top_navigation {
+    margin: 0 35px 0 24px;
+    height: 100vh;
+    transition: height .5s ease-out;
+    display: none;
+  }
+
   .menu_icon {
     margin: 0 35px 0 24px;
     align-items: center;
     display: flex;
     justify-content: space-between;
     padding: 16px 0 12px 0;
+    overflow: hidden;
+    position: relative;
   }
 
   .works_title hr {
@@ -348,6 +361,9 @@ body {
 }
 
 @media (min-width: 768px) {
+  #top_navigation {
+    display: none;
+  }
   .top_Section {
     display: flex;
     background-color: #1c1a19;
