--- a/style.css
+++ b/style.css
@@ -788,8 +788,107 @@ body {
   flex: 1 1 auto;
 }
 
+.popup {
+  position: absolute;
+  background: rgba(0, 0, 0, 0.7);
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-bottom: 39px;
+  padding-top: 60px;
+  z-index: 1;
+  /* visibility: hidden; */
+}
+
+.popup_content {
+  display: flex;
+  flex-direction: column;
+  background: #fff;
+  border-radius: 2px;
+  position: relative;
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-bottom: 20px;
+    /* margin: 8em auto; */
+}
+
+.popup_content ul {
+  list-style-type: none;
+  margin-top: 62px;
+  margin-bottom: 24px;
+  padding: 0;
+  display: flex;
+  /* justify-content: space-between; */
+}
+
+.popup_content li {
+  /* margin: 0; */
+  border: 1px solid #8993a4;
+  padding: 10px 12px;
+  color: #3c3a39;
+  font-size: 13px;
+  font-weight: 600;
+  font-family: Poppins, sans-serif;
+  font-style: normal;
+  line-height: 123%;
+  margin-right: 12px;
+}
+
+.popup_content a {
+  text-decoration: none;
+  color: #3c3a39;
+}
+
+.popup_info img {
+  width: 100%;
+  height: 220px;
+}
+
+.popup_info p {
+  margin-top: 24px;
+  font-family: 'inter', serif;
+  font-size: 16px;
+  line-height: 150%;
+  font-style: normal;
+  margin-bottom: 16px;
+}
+
+.titleContent {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  padding: 0;
+  position: relative;
+}
+
+.titleContent h2{
+  font-family: Roboto, serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 136%;
+  margin: 0;
+}
+
+.bottom_section {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.bottom_section button {
+  font-family: "Inter", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 17px;
+  line-height: 141%;
+  background: #ff6b00;
+  color: #fff;
+  border: 1px #ff6b00;
+  padding: 10px 12px;
+}
+
 .contacts {
-  background-color: #dbd8d7;
+  background-color: #242221;
   overflow: hidden;
 }
 
@@ -838,9 +937,9 @@ body {
 .works_content li {
   margin: 0;
   border: 2px solid #8993a4;
-  padding: 0.625vw;
+  padding: 10px 12px;
   color: #091e42;
-  font-size: 0.9375vw;
+  font-size: 15px;
   font-weight: 500;
   font-family: "Inter", sans-serif;
   font-style: normal;
