--- a/style.css
+++ b/style.css
@@ -35,6 +35,12 @@ body {
     margin: 0 0 12px 0;
   }
 
+  .bottom_section {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+  }
+
   .subtitle {
     font-family: Roboto, sans-serif;
     color: #fff5e1;
@@ -174,13 +180,18 @@ body {
     font-family: "Inter", sans-serif;
     font-style: normal;
     font-weight: 400;
-    font-size: 1vmax;
+    font-size: 16px;
     text-align: justify;
     line-height: 150%;
     color: #091e42;
     display: grid;
     word-wrap: break-word;
     order: 1;
+  }
+
+  #popup_info img {
+    width: 100%;
+    height: 220px;
   }
 
   .content_desc {
@@ -357,6 +368,31 @@ body {
     gap: 0.75em;
   }
 
+  .popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    overflow: auto;
+    background: rgba(0, 0, 0, 0.7);
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-bottom: 39px;
+    padding-top: 60px;
+    z-index: 2;
+    visibility: hidden;
+  }
+  
+  .popup_content {
+    display: flex;
+    flex-direction: column;
+    background: #fff;
+    border-radius: 2px;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-bottom: 20px;
+  }
+
   .works_content button {
     font-family: "Inter", sans-serif;
     font-style: normal;
@@ -370,11 +406,42 @@ body {
     width: 124px;
     height: 48px;
   }
+
+  .titleContent {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    padding: 0;
+    position: relative;
+  }
+  
+  .titleContent h2{
+    font-family: Roboto, serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 136%;
+    margin: 0;
+  }
+
+  .popup_content ul {
+    list-style-type: none;
+    margin-top: 62px;
+    margin-bottom: 24px;
+    padding: 0;
+    display: flex;
+  }
 }
 
 @media (min-width: 768px) {
   #top_navigation {
     display: none;
+  }
+
+  .bottom_section {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 76px;
   }
 
   .top_Section {
@@ -395,6 +462,24 @@ body {
     line-height: 113%;
     letter-spacing: 0.37px;
     margin: 0 0 24px 0;
+  }
+
+  #popup_info img {
+    width: 100%;
+    height: auto;
+  }
+
+  #popup_info {
+    margin-right: 25px;
+  }
+
+  #popup_info p {
+    margin-top: 24px;
+    font-family: 'inter', serif;
+    font-size: 16px;
+    line-height: 150%;
+    font-style: normal;
+    margin-bottom: 16px;
   }
 
   .subtitle {
@@ -583,7 +668,7 @@ body {
     display: none;
   }
 
-  .grid_contentdesc {
+  #grid_contentdesc {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     padding-left: 8.9vw;
@@ -782,49 +867,76 @@ body {
     height: 48px;
     transition: height 2s, background-color 2s, rotate 2s;
   }
+
+  .popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    overflow: auto;
+    background: rgba(0, 0, 0, 0.7);
+    padding-left: 142px;
+    padding-right: 142px;
+    padding-bottom: 127px;
+    padding-top: 112px;
+    z-index: 2;
+    visibility: hidden;
+  }
+  
+  .popup_content {
+    display: flex;
+    flex-direction: column;
+    background: #fff;
+    padding: 24px;
+  }
+  
+  .desktopView{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .titleContent {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    padding: 0;
+  }
+  
+  .titleContent h2{
+    font-family: 'Crete Round', serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 138%;
+    color: #172b4d;
+    margin: 0;
+  }
+
+  .popup_content ul {
+    list-style-type: none;
+    margin-top: 22px;
+    margin-bottom: 50px;
+    padding: 0;
+    display: flex;
+  }
+
+  #projectDesc {
+    font-family: "Inter", serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 188%;
+    font-style: normal;
+    color: #344563;
+    margin: 0;
+  }
 }
 
 .top_Section > * {
   flex: 1 1 auto;
 }
 
-.popup {
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  overflow: auto;
-  background: rgba(0, 0, 0, 0.7);
-  padding-left: 16px;
-  padding-right: 16px;
-  padding-bottom: 39px;
-  padding-top: 60px;
-  z-index: 1;
-  /* visibility: hidden; */
-}
-
-.popup_content {
-  display: flex;
-  flex-direction: column;
-  background: #fff;
-  border-radius: 2px;
-  padding-left: 16px;
-  padding-right: 16px;
-  padding-bottom: 20px;
-    /* margin: 8em auto; */
-}
-
-.popup_content ul {
-  list-style-type: none;
-  margin-top: 62px;
-  margin-bottom: 24px;
-  padding: 0;
-  display: flex;
-  /* justify-content: space-between; */
-}
 
 .popup_content li {
-  /* margin: 0; */
   border: 1px solid #8993a4;
   padding: 10px 12px;
   color: #3c3a39;
@@ -839,43 +951,6 @@ body {
 .popup_content a {
   text-decoration: none;
   color: #3c3a39;
-}
-
-.popup_info img {
-  width: 100%;
-  height: 220px;
-}
-
-.popup_info p {
-  margin-top: 24px;
-  font-family: 'inter', serif;
-  font-size: 16px;
-  line-height: 150%;
-  font-style: normal;
-  margin-bottom: 16px;
-}
-
-.titleContent {
-  align-items: center;
-  display: flex;
-  justify-content: space-between;
-  padding: 0;
-  position: relative;
-}
-
-.titleContent h2{
-  font-family: Roboto, serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 32px;
-  line-height: 136%;
-  margin: 0;
-}
-
-.bottom_section {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 20px;
 }
 
 .bottom_section button {
