--- a/style.css
+++ b/style.css
@@ -699,6 +699,10 @@ body {
     display: none;
   }
 
+  .content_desc:hover .top_left button {
+    display: block;
+  }
+
   .top_left1 h2 {
     display: none;
   }
@@ -850,7 +854,7 @@ body {
 
   .top_left {
     position: absolute;
-    bottom: 10%;
+    bottom: 0%;
     left: 0;
   }
 
