--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
   #projectDesc {
     font-family: "Inter", serif;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 12px;
     line-height: 150%;
     font-style: normal;
     color: #344563;
@@ -439,10 +439,25 @@ body {
 
   .popup_content ul {
     list-style-type: none;
-    margin-top: 22px;
-    margin-bottom: 24px;
+    margin-top: 11px;
+    margin-bottom: 12px;
     padding: 0;
     display: flex;
+  }
+
+  .bottom_section button {
+    font-family: "Inter", sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 120%;
+    background: #ff6b00;
+    color: #fff;
+    border: 1px #ff6b00;
+    padding: 8px 10px;
+    margin-right: 7px;
+    display: flex;
+    align-items: center;
   }
 }
 
@@ -815,8 +830,7 @@ body {
   .center_content {
     display: grid;
     grid-template-rows: auto auto auto auto;
-    background-color: white;
-    padding: 24px 1vw 0 0;
+    background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.7));
     overflow-y: hidden;
   }
 
@@ -852,10 +866,26 @@ body {
     position: relative;
   }
 
+  .image_placement {
+    position: relative;
+  }
+  
+  .image_placement::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.7));
+    z-index: 1; /* Ensure the gradient layer is behind the content */
+  }
+
   .top_left {
     position: absolute;
     bottom: 0%;
     left: 0;
+    background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.7));
   }
 
   .top_left1 {
@@ -946,6 +976,21 @@ body {
     color: #344563;
     margin: 0;
   }
+
+  .bottom_section button {
+    font-family: "Inter", sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 17px;
+    line-height: 141%;
+    background: #ff6b00;
+    color: #fff;
+    border: 1px #ff6b00;
+    padding: 10px 12px;
+    margin-right: 12px;
+    display: flex;
+    align-items: center;
+  }
 }
 
 .top_Section > * {
@@ -971,21 +1016,6 @@ body {
 
 .btnIcon {
   margin-left: 15px;
-}
-
-.bottom_section button {
-  font-family: "Inter", sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 17px;
-  line-height: 141%;
-  background: #ff6b00;
-  color: #fff;
-  border: 1px #ff6b00;
-  padding: 10px 12px;
-  margin-right: 12px;
-  display: flex;
-  align-items: center;
 }
 
 .contacts {
